Added JSharp just for fun

--- a/NetScript.Impl.Cdom/NetScript.Impl.Cdom.csproj
+++ b/NetScript.Impl.Cdom/NetScript.Impl.Cdom.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="VJSharpCodeProvider" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CdomHelper.cs" />
