Added JScript CodeDOM

--- a/NetScript.Impl.Cdom/NetScript.Impl.Cdom.csproj
+++ b/NetScript.Impl.Cdom/NetScript.Impl.Cdom.csproj
@@ -30,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.JScript" />
     <Reference Include="System" />
     <Reference Include="VJSharpCodeProvider" />
   </ItemGroup>
