--- a/NetScript.Impl.Cdom/NetScript.Impl.Cdom.csproj
+++ b/NetScript.Impl.Cdom/NetScript.Impl.Cdom.csproj
@@ -30,6 +30,9 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Compiler.CodeDom">
+      <HintPath>..\..\..\..\Portable\Nuget\FSharp.Compiler.CodeDom.0.9.3.0\lib\net40\FSharp.Compiler.CodeDom.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.JScript" />
     <Reference Include="System" />
     <Reference Include="VJSharpCodeProvider" />
